<resources>
    <string name="app_name">秀逗坊</string>
    <!--登录-->
    <string name="select_server">请选择需要登录的服务器</string>
    <string name="auto">自动</string>
    <string name="input_account">请输入账号</string>
    <string name="input_password">请输入密码</string>
    <string name="remember_password">记住密码</string>
    <string name="login">登录</string>
    <string name="warm_reminder">温馨提示</string>
    <string name="input_verification_code">请输入验证码</string>
    <string name="get_verification_code">获取验证码</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="initial_time">60</string>
    <!--设置-->
    <string name="exit_login">退出登录</string>
    <!--收款-->
    <string name="customer_no">客户编号</string>
    <string name="customer_name">客户名称</string>
    <string name="customer_total_name">客户全称</string>
    <string name="debt_amount">欠款金额</string>
    <string name="account_balance">账户余额</string>
    <string name="area_type">区域类型</string>
    <string name="area">区域</string>
    <string name="subject">会计科目</string>
    <string name="payment_date">款项日期</string>
    <string name="discount_amount">优惠金额</string>
    <string name="payment_amount">款项金额</string>
    <string name="receipt_account">收款账号</string>
    <string name="receipt_person">收款人</string>
    <string name="receipt_type">收款方式</string>
    <string name="payment">收付款</string>
    <string name="format_receipt_amount">实收金额为：%s</string>
    <string name="format_discount_amount">优惠金额为：%s</string>
    <!--产品-->
    <string name="already_set_img">是否有图片</string>
    <string name="no_name_or_class_name">编号、名称或类名</string>
    <!--库存-->
    <string name="input_no">请输入编号</string>
    <string name="no">编号</string>
    <string name="input_name">请输入名称</string>
    <string name="name">名称</string>
    <string name="type">类别</string>
    <string name="input_supplier">请输入供应商</string>
    <string name="supplier">供应商</string>
    <string name="input_size">请输入型号</string>
    <string name="size">型号</string>
    <string name="bar_code">条形码</string>
    <string name="input_bar_code">请输入条形码</string>
    <string name="input_brand">请输入品牌</string>
    <string name="brand">品牌</string>
    <string name="input_details">请输入描述</string>
    <string name="details">描述</string>
    <string name="belong_unit">所属单位</string>
    <string name="amount">数量</string>
    <string name="include_subclass">包含子类</string>
    <string name="filter">筛选</string>
    <!--开单-->
    <string name="customer_name_2">客户名称：</string>
    <string name="default_mobile_phone_num">默认手机号</string>
    <string name="add_collect_goods_address">新增收货地址</string>
    <string name="add_deliver_goods_address">新增发货地址</string>
    <string name="add_cargo_terminal">新增货运站</string>
    <string name="debt_format">欠：%s</string>
    <string name="discount_format">%s折</string>
    <string name="customer_info">客户信息</string>
    <string name="input_new_cargo_terminal">请输入新增货运站</string>
    <string name="input_new_deliver_goods_address">请输入新增发货地址</string>
    <string name="input_new_collect_goods_address">请输入新增收货地址</string>
    <string name="input_new_contact">请输入新增联系人</string>
    <string name="forcast">预</string>
    <string name="total_amount_1">总数量：</string>
    <string name="total_sums_1">总金额：</string>
    <string name="reopen_order">重新开单</string>
    <string name="create_order">生成订单</string>
    <!--运号-->
    <string name="search">搜索</string>
    <string name="customer">客户</string>
    <string name="input_customer">请输入客户</string>
    <string name="order_no">单号</string>
    <string name="input_order_no">请输入单号</string>
    <string name="start_time">开始时间</string>
    <string name="end_time">结束时间</string>
    <string name="transportion_no">运号</string>
    <string name="input_transportion_no">请输入运号</string>
    <string name="clear">清空</string>
    <string name="select_pic">相册/拍照</string>
    <string name="submit">提交</string>
    <string name="clear_transport_num">清除运号</string>
    <string name="input_transport_num">请输入运号</string>
    <string name="change_supplier_info_and_reload_history_price">更换供应商信息，是否重新获取历史价格信息，原有价格将被替换，是否替换？</string>
    <!--采购-->
    <string name="confirm_order">确认单据</string>
    <string name="confirm_bill">确认单据</string>
    <string name="save_as_draft">存为草稿</string>
    <string name="give_up">放弃</string>
    <string name="search_in_english">Search</string>
    <string name="select_custom">请选择客户</string>
    <string name="sure">确定</string>
    <string name="finish_edit">完成编辑</string>
    <string name="keep_on">继续</string>
    <string name="high_price_tip">您填写的单位价格超出历史价格 %s%%，是否继续？</string>
    <string name="supplier_name">供应商名称</string>
    <string name="input_total_name">请输入全称</string>
    <string name="total_name">全称</string>
    <string name="input_mobile_phone_num">请输入手机号码</string>
    <string name="mobile_phone_num">手机号码</string>
    <string name="input_phone_num">请输入电话号码</string>
    <string name="phone_num">电话号码</string>
    <string name="input_contact">请输入联系人</string>
    <string name="contact">联系人</string>
    <string name="custom_area">手动选择区域</string>
    <string name="input_area_no">请输入区域编号</string>
    <string name="area_no">区域编号</string>
    <string name="input_area_name">请输入区域名称</string>
    <string name="area_name">区域名称</string>
    <string name="is_give_up_edit">是否放弃本次编辑</string>
    <string name="product_no">产品编号</string>
    <string name="product_name">产品名称</string>
    <string name="stock_amount">库存</string>
    <string name="free_amount">自由数</string>
    <string name="expand_info">∨拓展信息</string>
    <string name="hide">∧隐藏</string>
    <string name="purchase_unit">采购单位</string>
    <string name="price_source">价格来源</string>
    <string name="single_price">单品价</string>
    <string name="input_unit_price">请输入单位价</string>
    <string name="unit_price">单位价</string>
    <string name="product_color">产品颜色</string>
    <string name="product_spec">产品规格</string>
    <string name="input_purchase_amount">请输入采购数量</string>
    <string name="purchase_amount">采购数量</string>
    <string name="git">赠品</string>
    <string name="input_goods_no">请输入货号</string>
    <string name="goods_no">货号</string>
    <string name="input_operator">请输入操作员</string>
    <string name="operator">操作员</string>
    <string name="input_purchase_order_tip">请输入采购单备注</string>
    <string name="purchase_order_tip">采购单备注</string>
    <string name="order_transfer_purchase">订单转采购</string>
    <string name="supplier_total_name">供应商全称</string>
    <string name="supplier_no">供应商编号</string>
    <string name="debt">前结欠</string>
    <string name="new_mobile_phone_num">新手机号码</string>
    <string name="input_new_mobile_phone_num">请输入新手机号码</string>
    <string name="new_phone_num">新电话号码</string>
    <string name="input_new_phone_num">请输入新电话号码</string>
    <string name="add_contact">新增联系人</string>
    <string name="input_add_contact">请输入新增联系人</string>
    <string name="already_receive">已收货：%s个</string>
    <string name="stop_produce_tip">当前商品已停止生产，请选择其他商品</string>
    <string name="not_replace">不替换</string>
    <string name="replace">替换</string>
    <string name="result_for_scan">扫描结果如下</string>
    <string name="unit_price_code">单位价码</string>
    <!--查单-->
    <string name="amt_format">¥ %s</string>
    <string name="ph_amt_format">配货数：%s</string>
    <string name="sum_format">小计：%s</string>
    <string name="order_sums">本单金额：</string>
    <string name="should_collected">本单应收：</string>
    <string name="discount_sums">优惠金额：</string>
    <string name="this_collection">本次收款：</string>
    <string name="customer_1">客户：</string>
    <string name="order_no_1">单号：</string>
    <string name="status_1">状态：</string>
    <string name="time_1">时间：</string>
    <string name="detail">详情</string>
    <string name="look_over_print_format">查看打印格式</string>
    <string name="tip_1">备注：</string>
    <string name="goods_no_1">货号：</string>
</resources>
