<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <include layout="@layout/layout_toolbar"/>

    <com.example.administrator.xiudoufang.common.widget.SearchInfoView
        android:id="@+id/siv_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:siv_hint="@string/supplier_name"
        app:siv_type="TYPE_EDIT"/>

    <com.example.administrator.xiudoufang.common.widget.SearchInfoView
        android:id="@+id/siv_total_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:siv_hint="@string/input_total_name"
        app:siv_key="@string/total_name"
        app:siv_type="TYPE_EDIT"/>

    <com.example.administrator.xiudoufang.common.widget.SearchInfoView
        android:id="@+id/siv_mobile_phone_num"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:siv_hint="@string/input_mobile_phone_num"
        app:siv_key="@string/mobile_phone_num"
        app:siv_type="TYPE_EDIT"/>

    <com.example.administrator.xiudoufang.common.widget.SearchInfoView
        android:id="@+id/siv_phone_num"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:siv_hint="@string/input_phone_num"
        app:siv_key="@string/phone_num"
        app:siv_type="TYPE_EDIT"/>

    <com.example.administrator.xiudoufang.common.widget.SearchInfoView
        android:id="@+id/siv_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:siv_hint="@string/input_contact"
        app:siv_key="@string/contact"
        app:siv_type="TYPE_EDIT"/>

    <com.example.administrator.xiudoufang.common.widget.SearchInfoView
        android:id="@+id/siv_custom_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:siv_key="@string/custom_area"
        app:siv_type="TYPE_TEXT"/>

    <com.example.administrator.xiudoufang.common.widget.SearchInfoView
        android:id="@+id/siv_area_no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:siv_hint="@string/input_area_no"
        app:siv_key="@string/area_no"
        app:siv_type="TYPE_EDIT"/>

    <com.example.administrator.xiudoufang.common.widget.SearchInfoView
        android:id="@+id/siv_area_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:siv_hint="@string/input_area_name"
        app:siv_key="@string/area_name"
        app:siv_type="TYPE_EDIT"/>

    <TextView
        android:id="@+id/tv_sure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="36dp"
        android:layout_marginRight="36dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rect_4_blue_6_pt_pb"
        android:clickable="true"
        android:gravity="center"
        android:paddingBottom="4dp"
        android:paddingTop="4dp"
        android:text="@string/sure"
        android:textColor="@color/white"
        android:textSize="14dp"/>
</LinearLayout>