<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/layout_toolbar"/>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.example.administrator.xiudoufang.common.widget.SearchInfoView
                android:id="@+id/siv_no"
                app:siv_isShowNext="false"
                app:siv_key="@string/customer_no"
                app:siv_type="TYPE_TEXT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <com.example.administrator.xiudoufang.common.widget.SearchInfoView
                android:id="@+id/siv_name"
                app:siv_isShowNext="false"
                app:siv_key="@string/customer_name"
                app:siv_type="TYPE_TEXT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <com.example.administrator.xiudoufang.common.widget.SearchInfoView
                android:id="@+id/siv_total_name"
                app:siv_isShowNext="false"
                app:siv_key="@string/customer_total_name"
                app:siv_type="TYPE_TEXT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <com.example.administrator.xiudoufang.common.widget.SearchInfoView
                android:id="@+id/siv_debt"
                app:siv_isShowNext="false"
                app:siv_key="@string/debt_amount"
                app:siv_type="TYPE_TEXT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <com.example.administrator.xiudoufang.common.widget.SearchInfoView
                android:id="@+id/siv_balance"
                app:siv_isShowNext="false"
                app:siv_key="@string/account_balance"
                app:siv_type="TYPE_TEXT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <com.example.administrator.xiudoufang.common.widget.SearchInfoView
                android:id="@+id/siv_area_type"
                app:siv_isShowNext="false"
                app:siv_key="@string/area_type"
                app:siv_type="TYPE_TEXT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <com.example.administrator.xiudoufang.common.widget.SearchInfoView
                android:id="@+id/siv_area"
                app:siv_isShowNext="false"
                app:siv_key="@string/area"
                app:siv_type="TYPE_TEXT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <com.example.administrator.xiudoufang.common.widget.SearchInfoView
                android:id="@+id/siv_default_mobile_phone"
                app:siv_key="@string/default_mobile_phone_num"
                app:siv_type="TYPE_TEXT"
                app:siv_isShowNext="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <com.example.administrator.xiudoufang.common.widget.SearchInfoView
                android:id="@+id/siv_new_mobile_phone"
                app:siv_isShowNext="false"
                app:siv_key="@string/new_mobile_phone_num"
                app:siv_type="TYPE_EDIT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <com.example.administrator.xiudoufang.common.widget.SearchInfoView
                android:id="@+id/siv_new_phone"
                app:siv_isShowNext="false"
                app:siv_key="@string/new_phone_num"
                app:siv_type="TYPE_EDIT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <com.example.administrator.xiudoufang.common.widget.SearchInfoView
                android:id="@+id/siv_add_contact"
                app:siv_key="@string/add_contact"
                app:siv_type="TYPE_TEXT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <com.example.administrator.xiudoufang.common.widget.SearchInfoView
                android:id="@+id/siv_collect_goods_address"
                app:siv_key="@string/add_collect_goods_address"
                app:siv_type="TYPE_TEXT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <com.example.administrator.xiudoufang.common.widget.SearchInfoView
                android:id="@+id/siv_deliver_goods_address"
                app:siv_key="@string/add_deliver_goods_address"
                app:siv_type="TYPE_TEXT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <com.example.administrator.xiudoufang.common.widget.SearchInfoView
                android:id="@+id/siv_add_cargo_terminal"
                app:siv_key="@string/add_cargo_terminal"
                app:siv_type="TYPE_TEXT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tv_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/bg_textview_confirm_order_shape"
                android:gravity="center"
                android:padding="10dp"
                android:onClick="onSubmit"
                android:text="@string/sure"
                android:textColor="@color/white"
                android:textSize="14dp"/>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>