<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/login_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="24dp"
    android:paddingRight="24dp">

    <ImageView
        android:id="@+id/iv_icon"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:background="@mipmap/ic_icon" />

    <com.example.administrator.xiudoufang.common.widget.SimpleEditTextView
        android:id="@+id/setv_server"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_icon"
        android:layout_marginTop="36dp"
        app:setv_icon="@mipmap/ic_cloud"
        app:setv_inputType="TYPE_NULL"
        app:setv_isEditable="false"
        app:setv_value="@string/auto" />

    <com.example.administrator.xiudoufang.common.widget.SimpleEditTextView
        android:id="@+id/setv_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/setv_server"
        app:setv_hint="@string/input_account"
        app:setv_icon="@mipmap/ic_person" />

    <com.example.administrator.xiudoufang.common.widget.SimpleEditTextView
        android:id="@+id/setv_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/setv_account"
        app:setv_hint="@string/input_password"
        app:setv_icon="@mipmap/ic_lock"
        app:setv_is_password="true" />

    <LinearLayout
        android:id="@+id/ll_remember_psd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/setv_password"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:paddingLeft="10dp">

        <ImageView
            android:id="@+id/iv_psd_status"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/bg_password_status_selector" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/remember_password" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_remember_psd"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="14dp" />

</RelativeLayout>