<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rect_4_white"
    android:orientation="vertical">

    <android.support.constraint.Guideline
        android:id="@+id/guideline_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"/>

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="6dp"
        android:text="@string/warm_reminder"
        android:textColor="@color/black"
        android:textSize="14dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/tv_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="6dp"
        android:text="@string/change_supplier_info_and_reload_history_price"
        android:textColor="@color/gray_888888"
        android:textSize="12dp"
        app:layout_constraintTop_toBottomOf="@id/tv_title"/>

    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rect_4_bl_gray"
        android:gravity="center"
        android:paddingBottom="4dp"
        android:paddingTop="4dp"
        android:text="@string/not_replace"
        android:textColor="@color/black"
        android:textSize="13dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@id/guideline_1"
        app:layout_constraintTop_toBottomOf="@id/tv_content"/>

    <TextView
        android:id="@+id/tv_replace"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rect_4_br_blue"
        android:gravity="center"
        android:paddingBottom="4dp"
        android:paddingTop="4dp"
        android:text="@string/replace"
        android:textColor="@color/white"
        android:textSize="13dp"
        app:layout_constraintBottom_toBottomOf="@id/tv_cancel"
        app:layout_constraintLeft_toLeftOf="@id/guideline_1"
        app:layout_constraintRight_toRightOf="parent"/>
</android.support.constraint.ConstraintLayout>